[tool.poetry]
name = "Floodgate"
version = "0.1.0"
description = "A Discord bot that allows messages in channels for only a specified amount of time."
authors = ["Phanabani <phanabani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
discord = "^1.7.0"
pydantic = "^1.9.0"
pytimeparse = "^1.1.8"
pendulum = "^2.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
